CalibreDb: Implement title filter
Resolves #134
