# api/src/api/api.spec.yaml
@@ -515,6 +515,13 @@ paths:
           schema:
             type: integer
             minimum: 1
+        - name: titleContains
+          description: string to look for in title field
+          in: query
+          required: false
+          schema:
+            type: string
+            minLength: 1
         - name: author
           description: Author ID
           in: query
